--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- BEGIN PAGE LOADER  -->
-<div class="preloader-backdrop">
+<div class="preloader-backdrop" style="z-index: 9999;">
   <div class="page-preloader">Chargement</div>
 </div>
 <!-- END PAGE LOADER  -->
