--- a/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
+++ b/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+.form-control {
+  font-family: inherit;
+}
+</style>
 <div class="page-content fade-in-up">
   <div class="row">
     <div class="col-lg-8">
@@ -11,6 +16,18 @@
                 <input class="form-control" formControlName="company_name" type="text" id="company_name"
                   name="company_name" placeholder="Nom de la société">
                 <div *ngIf="f.company_name.errors && f.company_name.dirty">
+                  <label id="name-error" class="help-block error" for="name">Ce champ est obligatoire.</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group mb-4">
+                <label>Adresse email</label>
+                <input class="form-control" autocomplete="off" formControlName="email" id="email"
+                  name="email" type="text" placeholder="Email">
+                <div *ngIf="f.email.errors && f.email.dirty">
                   <label id="name-error" class="help-block error" for="name">Ce champ est obligatoire.</label>
                 </div>
               </div>
@@ -82,7 +99,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group mb-4">
-                <label>Commission</label>
+                <label>Commission (en %)</label>
                 <input class="form-control" formControlName="commission" type="number" id="commision" name="commission"
                   placeholder="">
 
@@ -92,20 +109,6 @@
               </div>
             </div>
           </div>
-
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group mb-4">
-                <label>Adresse email</label>
-                <input class="form-control" autocomplete="off" formControlName="email" id="email"
-                  name="email" type="text" placeholder="Email">
-                <div *ngIf="f.email.errors && f.email.dirty">
-                  <label id="name-error" class="help-block error" for="name">Ce champ est obligatoire.</label>
-                </div>
-              </div>
-            </div>
-          </div>
-
 
           <div class="text-center mb-4">
             <div class="row">
