--- a/src/app/pages/products/product-edit/product-edit.component.html
+++ b/src/app/pages/products/product-edit/product-edit.component.html
@@ -1,4 +1,7 @@
 <style type="text/css">
+.form-control {
+  font-family: inherit;
+}
 </style>
 <div class="page-content fade-in-up">
   <div class="row">
@@ -62,7 +65,7 @@
 
           <div class="text-center mb-4">
             <div class="row">
-              <button class="btn btn-primary  col-4"  type="submit">AJOUTER</button>
+              <button class="btn btn-primary  col-4"  type="submit">METTRE A JOUR</button>
               <a class="btn btn-secondary ml-3 col-4" [routerLink]="['/product', 'lists']"
                 routerLinkActive="active">RETOUR</a>
             </div>
