--- a/src/app/pages/supplier/supplier-datatable/supplier-datatable.component.html
+++ b/src/app/pages/supplier/supplier-datatable/supplier-datatable.component.html
@@ -20,7 +20,7 @@
           <thead class="thead-default thead-lg">
             <tr>
               <th>ID</th>
-              <th>Nom</th>
+              <th>Nom de société</th>
               <th>Reference</th>
               <th>Pourcentage</th>
               <th>Email</th>
