--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -2,6 +2,18 @@
     <div class="ibox-title">LES COMMANDES</div>
 </div>
 <div class="ibox-body">
+    <div class="row mb-3">
+        <div class="col-sm-4">
+            <select class="form-control" name="qtFilterPosition" id="qtFilterPosition" (change)="onChangePosition($event)">
+                <option value="">Choississez un statut</option>
+                <option value="0">En attente</option>
+                <option value="1">Envoyer</option>
+                <option value="2">Rejetés</option>
+                <option value="3">Validé</option>
+            </select>
+        </div>
+    </div>
+    <app-status-quotation-switcher [quotation]="qtSelected"></app-status-quotation-switcher>
     <div class="">
         <table class="table table-hover" id="quotation-table">
             <thead class="thead-default thead-lg">
