--- a/src/app/pages/supplier/add-article/add-article.component.html
+++ b/src/app/pages/supplier/add-article/add-article.component.html
@@ -88,7 +88,7 @@
   </div>
   <div class="modal-footer justify-content-between bg-primary-50">
     <div>
-      <button class="btn btn-primary btn-rounded mr-3" [disabled]="loading" type="submit">Ajouter</button>
+      <button class="btn btn-primary btn-rounded mr-3" type="submit">Ajouter</button>
     </div>
   </div>
 </form>
