--- a/src/app/pages/supplier/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/edit-article/edit-article.component.html
@@ -18,9 +18,10 @@
           <div class="form-group mb-4">
             <label>Fournisseur</label>
             <ng-select name="supplier" placeholder="Selectionner un fournisseur" formControlName="user_id"
-              bindLabel="name" bindValue="id" [multiple]="false" [items]="Suppliers" required>
+              bindLabel="company_name" bindValue="id" [multiple]="false" [items]="Suppliers" required>
               <ng-template ng-option-tmp let-item="item">
-                  {{item.name}} (<b>F{{item.id}}</b>)
+                {{item.company_name}} <br />
+                <small>{{item.reference}}</small>
               </ng-template>
             </ng-select>
           </div>
@@ -95,7 +96,7 @@
   <div class="modal-footer justify-content-between bg-primary-50">
   
       <div>
-          <button class="btn btn-primary btn-rounded mr-3" [disabled]="loading" type="submit">Mettre à jour</button>
+          <button class="btn btn-primary btn-rounded mr-3" type="submit">Mettre à jour</button>
       </div>
       <a class="text-danger" (click)="onRemoveArticle(ID)"><i class="la la-trash font-20"></i></a>
   </div>
