--- a/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
+++ b/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
@@ -112,7 +112,7 @@
 
           <div class="text-center mb-4">
             <div class="row">
-              <button class="btn btn-primary  col-4" [disabled]="loading" type="submit">METTRE A JOUR</button>
+              <button class="btn btn-primary  col-4" type="submit">METTRE A JOUR</button>
               <a class="btn btn-secondary ml-3 col-4" [routerLink]="['/supplier/lists']"
                 routerLinkActive="active">RETOUR</a>
             </div>
