--- a/src/app/pages/supplier/review-supplier/review-supplier.component.html
+++ b/src/app/pages/supplier/review-supplier/review-supplier.component.html
@@ -5,13 +5,13 @@
 </style>
 <div class="page-content fade-in-up">
 
-    <div class="modal fade" id="send-mail-modal">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          
-        </div>
+  <div class="modal fade" id="send-mail-modal">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <app-review-mail-supplier  [supplier]="selectedSupplier"></app-review-mail-supplier>
       </div>
     </div>
+  </div>
 
   <div class="row">
     <div class="col-lg-10">
