--- a/src/app/pages/quotation/quotation-mail/quotation-mail.component.html
+++ b/src/app/pages/quotation/quotation-mail/quotation-mail.component.html
@@ -40,8 +40,8 @@
   <div class="modal-footer justify-content-between bg-primary-50">
     <div></div>
     <div>
-        <button class="btn btn-success mr-3" [disabled]="loading" (click)="onSend()">Envoyer</button>
-        <button class="btn btn-secondary mr-3" [disabled]="loading" data-dismiss="modal">Annuler</button>
+        <button class="btn btn-success mr-3" (click)="onSend()">Envoyer</button>
+        <button class="btn btn-secondary mr-3" data-dismiss="modal">Annuler</button>
     </div>
       
   </div>
