--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,3 +1,4 @@
+
 <ul class="side-menu metismenu scroller">
   <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
@@ -6,7 +7,7 @@
       <i class="fa fa-angle-left arrow"></i>
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
-        <li><a routerLinkActive="active" routerLink="/dashboard">Les commandes</a></li>
+      <li><a routerLinkActive="active" routerLink="/dashboard">Les commandes</a></li>
     </ul>
   </li>
   <li routerLinkActive="active">
@@ -17,7 +18,7 @@
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
       <li><a routerLink="/supplier/lists" routerLinkActive="active">Tous les fournisseurs</a></li>
-      <li><a [routerLink]="['/supplier', 'review']" routerLinkActive="active" >En attente</a></li>
+      <li><a [routerLink]="['/supplier', 'review']" routerLinkActive="active">En attente</a></li>
       <li><a routerLink="/supplier/new" routerLinkActive="active">Ajouter</a></li>
       <li class="heading" style="padding-left: 22%">ARTICLES</li>
       <li><a routerLink="/supplier/articles" routerLinkActive="active">Tous les articles</a></li>
@@ -34,6 +35,17 @@
       <li><a routerLink="/product/lists" routerLinkActive="active">Tous les produits</a>
       </li>
       <li><a routerLink="/product/new" routerLinkActive="active">Ajouter</a>
+      </li>
+    </ul>
+  </li>
+  <li routerLinkActive="active">
+    <a href="href=&quot;javascript:;&quot;">
+      <i class="sidebar-item-icon ti-layout-media-overlay-alt-2"></i>
+      <span class="nav-label">Services</span>
+      <i class="fa fa-angle-left arrow"></i>
+    </a>
+    <ul class="nav-2-level collapse" routerLinkActive="in">
+      <li><a routerLink="/sav" routerLinkActive="active">Demande de service</a>
       </li>
     </ul>
   </li>
