change structural of percent

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -3,7 +3,7 @@
   <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-view-grid"></i>
-      <span class="nav-label">Dashboards</span>
+      <span class="nav-label">Tableau de board</span>
       <i class="fa fa-angle-left arrow"></i>
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
