--- a/src/app/pages/customer/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer/customer-edit/customer-edit.component.html
@@ -10,30 +10,30 @@
 </div>
 <div class="row">
   <div class="col-6">
-      <div class="ibox-body" *ngIf="Client.billing">
-          <h5 class="font-strong mb-4">BILLING</h5>
+      <div class="ibox-body" *ngIf="hasAddress">
+          <h5 class="font-strong mb-4">Addresse de facturation</h5>
           <div class="row mb-2">
-              <div class="col-6 text-muted">First Name:</div>
+              <div class="col-6 text-muted">Prénom:</div>
               <div class="col-6">{{Client.billing.first_name}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Last Name:</div>
+              <div class="col-6 text-muted">Nom:</div>
               <div class="col-6">{{Client.billing.last_name}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Company:</div>
+              <div class="col-6 text-muted">Société:</div>
               <div class="col-6">{{Client.billing.company}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">City:</div>
+              <div class="col-6 text-muted">Ville:</div>
               <div class="col-6">{{Client.billing.postcode}} {{Client.billing.city}}, {{Client.billing.country}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Address:</div>
+              <div class="col-6 text-muted">Adresse:</div>
               <div class="col-6">{{Client.billing.address_1}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Phone:</div>
+              <div class="col-6 text-muted">Numéro de téléphone:</div>
               <div class="col-6">{{Client.billing.phone}}</div>
           </div>
           <div class="row mb-2">
@@ -44,26 +44,26 @@
   </div>
 
   <div class="col-6">
-      <div class="ibox-body" *ngIf="Client.shipping">
-          <h5 class="font-strong mb-4">SHIPPING</h5>
+      <div class="ibox-body" *ngIf="hasAddress">
+          <h5 class="font-strong mb-4">Adresse de livraison</h5>
           <div class="row mb-2">
-              <div class="col-6 text-muted">First Name:</div>
+              <div class="col-6 text-muted">Prénom:</div>
               <div class="col-6">{{Client.shipping.first_name}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Last Name:</div>
+              <div class="col-6 text-muted">Nom:</div>
               <div class="col-6">{{Client.shipping.last_name}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Company:</div>
+              <div class="col-6 text-muted">Scoiété:</div>
               <div class="col-6">{{Client.shipping.company}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">City:</div>
+              <div class="col-6 text-muted">Ville:</div>
               <div class="col-6">{{Client.shipping.postcode}} {{Client.shipping.city}}, {{Client.shipping.country}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Address:</div>
+              <div class="col-6 text-muted">Adresse:</div>
               <div class="col-6">{{Client.shipping.address_1}}</div>
           </div>
       </div>
