--- a/src/app/pages/supplier/review-supplier/review-supplier.component.html
+++ b/src/app/pages/supplier/review-supplier/review-supplier.component.html
@@ -21,7 +21,7 @@
             <span class="mr-4 static-badge badge-pink"><i class="la la-folder font-36"></i></span>
             <div>
               <h5 class="font-strong">Fournisseurs</h5>
-              <div class="text-light">Les fournisseur en revision</div>
+              <div class="text-light">Les fournisseurs qui possedent des articles en revision</div>
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
                 <tr>
                   <th class="pl-4">Fournisseur</th>
                   <th>Reference</th>
-                  <th>Pourcentage</th>
+                  <th>Numéro de telephone</th>
                   <th>Email</th>
                   <th>Date d'inscription</th>
                   <th class="pr-4">Action</th>
