--- a/src/app/components/filter-article/filter-article.component.html
+++ b/src/app/components/filter-article/filter-article.component.html
@@ -1,19 +1,24 @@
 <form id="filter-form">
-    <h4 class="font-strong text-center mb-5">Trouver une article</h4>
-    <div class="form-group mb-4">
-        <ng-select name="supplier" (change)="onAdd($event)" placeholder="Selectionner un fournisseur" [(ngModel)]="filterForm.supplier" bindLabel="company_name" bindValue="id"
-                  [searchFn]="customSearchFn" [hideSelected]="true" [multiple]="false" [items]="Suppliers">
-          <ng-template ng-option-tmp let-item="item">
-              {{item.company_name}} <br />
-              <small>{{item.reference}}</small>
-          </ng-template>
-        </ng-select>
-        
+  <div class="row">
+    <div class="form-group mb-4 col-sm-4">
+      <ng-select name="supplier" (change)="onAdd($event)" placeholder="Selectionner un fournisseur"
+        [(ngModel)]="filterForm.supplier" bindLabel="company_name" bindValue="id" [searchFn]="customSearchFn"
+        [hideSelected]="true" [multiple]="false" [items]="Suppliers">
+        <ng-template ng-option-tmp let-item="item">
+          {{item.company_name}} <br />
+          <small>{{item.reference}}</small>
+        </ng-template>
+      </ng-select>
+
     </div>
-    <div class="form-group mb-4">
-        <ng-select name="category" (change)="onAdd($event)" placeholder="Selectionner une categorie" [(ngModel)]="filterForm.categorie" bindLabel="name" bindValue="id"
-                  [searchFn]="customSearchFn" [hideSelected]="true" [multiple]="false" [items]="Categories">
-                </ng-select>
-        
+
+    <div class="form-group mb-4 col-sm-4">
+      <ng-select name="category" (change)="onAdd($event)" placeholder="Selectionner une categorie"
+        [(ngModel)]="filterForm.categorie" bindLabel="name" bindValue="id" [searchFn]="customSearchFn"
+        [hideSelected]="true" [multiple]="false" [items]="Categories">
+      </ng-select>
+
     </div>
+  </div>
+
 </form>
