--- a/src/app/pages/products/product-new/product-new.component.html
+++ b/src/app/pages/products/product-new/product-new.component.html
@@ -44,6 +44,18 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group mb-4">
+                <label class="font-light">Marge</label>
+                <input class="form-control" autocomplete="off" formControlName="marge" id="marge" name="marge" type="text"
+                  placeholder="">
+                <div *ngIf="f.marge.errors && f.marge.dirty">
+                  <label class="help-block error" for="name">Ce champ est obligatoire.</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-md-12">
               <div class="form-group mb-4">
                 <label class="font-light">Categorie(s)</label>
