--- a/src/app/pages/products/product-lists/product-lists.component.html
+++ b/src/app/pages/products/product-lists/product-lists.component.html
@@ -22,6 +22,7 @@
               <th>ID</th>
               <th>Titre</th>
               <th>Reference</th>
+              <th>Marge</th>
               <th>Catégorie</th>
               <th>Etat</th>
               <th>Date d'ajout</th>
