--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -1,5 +1,5 @@
 <div class="ibox-head">
-    <div class="ibox-title">LES COMMANDES</div>
+    <div class="ibox-title">LES DEMANDES</div>
 </div>
 <div class="ibox-body">
     <div class="row mb-3">
