--- a/src/app/pages/supplier/article-supplier/article-supplier.component.html
+++ b/src/app/pages/supplier/article-supplier/article-supplier.component.html
@@ -34,7 +34,7 @@
                             {{article.supplier.company_name}}
                           </a></td>
                           <td>
-                            <a target="_blank" [routerLink]="['/product', article.product_id, 'edit']" routerLinkActive="active" class="badge badge-info">Voir</a>
+                            <a target="_blank" [routerLink]="['/product', article.product_id, 'edit']" routerLinkActive="active" class="badge badge-warning">Voir</a>
                           </td>
                           <td><span>{{article.date_review}}</span></td>
                       </tr>
