--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -7,7 +7,7 @@
       <i class="fa fa-angle-left arrow"></i>
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
-      <li><a routerLinkActive="active" routerLink="/dashboard">Les commandes</a></li>
+      <li><a routerLinkActive="active" routerLink="/dashboard">Les demandes</a></li>
     </ul>
   </li>
   <li routerLinkActive="active">
