--- a/src/app/pages/supplier/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/edit-article/edit-article.component.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-8">
             <div class="form-group mb-4">
-              <label>Stock</label>
+              <label>Qty</label>
               <input class="form-control" formControlName="stock" type="text" id="stock" name="stock"
                 placeholder="Ajouter la quantité disponible">
               <div *ngIf="f.stock.errors && f.stock.dirty">
