Correction pour la modification d'article

--- a/src/app/pages/supplier/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/edit-article/edit-article.component.html
@@ -74,6 +74,15 @@
             </div>
           </div>
       </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group mb-4">
+            <label>La dernière mise à jour date de</label>
+            <div id="date_review" class="alert alert-pink">{{dateReview}}, {{dateReviewFromNow}}</div>
+          </div>
+        </div>
+      </div>
       <div class="text-muted font-11">
           Sed tristique lacinia enim, sit amet consequat ante suscipit at. Quisque a eros vitae elit molestie tristique.
       </div>
